[gd_scene load_steps=4 format=3 uid="uid://c8qvt5qjkuv7q"]

[ext_resource type="Script" path="res://scripts/ui/achievement/achievement_item.gd" id="1_yvmqe"]
[ext_resource type="Texture2D" path="res://assets/ui/icons/achievement_default.png" id="2_abcde"]
[ext_resource type="Texture2D" path="res://assets/ui/icons/lock.png" id="3_fghij"]

[node name="AchievementItem" type="Control"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 3
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 80.0
grow_horizontal = 2
script = ExtResource("1_yvmqe")

[node name="Background" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10

[node name="Icon" type="TextureRect" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.2
texture = ExtResource("2_abcde")
expand_mode = 1
stretch_mode = 5

[node name="LockIcon" type="TextureRect" parent="HBoxContainer/Icon"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -20.0
offset_top = -20.0
grow_horizontal = 0
grow_vertical = 0
texture = ExtResource("3_fghij")
expand_mode = 1
stretch_mode = 5

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.8

[node name="NameLabel" type="Label" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "成就名称"

[node name="DescriptionLabel" type="Label" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(0.8, 0.8, 0.8, 1)
theme_override_font_sizes/font_size = 12
text = "成就描述"
autowrap_mode = 3

[node name="ProgressBar" type="ProgressBar" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
value = 50.0

[node name="ProgressLabel" type="Label" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 10
text = "进度: 5/10"
horizontal_alignment = 1

[node name="RewardContainer" type="HBoxContainer" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10
alignment = 1

[node name="Tooltip" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
tooltip_text = "成就提示"
